# AutoAPE-mlps

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  VERSION  build-mlps.sh  deploy_mlps.sh  mlps.sh  pyproject.toml  requirements.txt  setup.py
conf/: mlps-conf.xml
doc/: algorithms.md
mlps/: MLProcessingServer.py
mlps/common/: Common.py  Constants.py
mlps/common/info/: ConvertFunctionInfo.py  DatasetInfo.py  FieldInfo.py  JobInfo.py
mlps/common/sftp/: PySFTPClient.py
mlps/common/utils/: ConfUtils.py  ImageUtils.py
mlps/conf/: mlps-conf.xml
mlps/core/: MLPSProcessor.py  RestManager.py  SFTPClientManager.py
mlps/core/data/: DataLoaderFactory.py  DataManager.py
mlps/info/: DatasetInfo.py  FieldInfo.py  JobInfo.py
mlps/mlps/: MLProcessingServer.py
mlps/mlps/common/: Common.py  Constants.py  RestManager.py  Utils.py
mlps/mlps/core/: MLPSProcessor.py  RestManager.py
mlps/mlps/resources/: com_code.json  rest_url_info.json
mlps/mlps/tools/: AES256.py  DynamicClassLoader.py  VersionManagement.py
mlps/resources/: com_func.json  rest_url_info.json
mlps/resources/cnvrtr/: FD_keywords_map.json  OC_keywords_map.json  PT_keywords_map.json  SSRF_keywords_map.json  XI_keywords_map.json  XS_keywords_map.json
mlps/tools/: DynamicClassLoader.py  VersionManagement.py
pycmmn/pycmmn/common/: Singleton.py  StringUtil.py
pycmmn/pycmmn/info/: DatasetInfo.py  FieldInfo.py  JobInfo.py
pycmmn/pycmmn/interfaces/: FileUtils.py
pycmmn/pycmmn/logger/: MPLogger.py
pycmmn/pycmmn/tools/: ConfUtils.py  VersionManagement.py
(+192 files in other folders)
